# FluxRT

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: stream_processor_config.json
scripts/: run_cv2_demo.py  run_websocket_server.py
src/fluxrt/: __init__.py
src/fluxrt/stream_processor/: __init__.py  interpolation_model.py  model_inference_subprocess.py  output_scheduler_subprocess.py  pipeline.py  stream_processor.py  transformer_flux2.py  update_controller.py
src/fluxrt/utils/: __init__.py  crop_maximal_rectangle.py  shared_tensor.py
src/fluxrt/websocket_server/: router.py  stream_processor_service.py
web_ui/: package-lock.json  package.json
web_ui/src/app/: globals.css  layout.tsx  page.tsx
web_ui/src/app/context/: ModelProvider.tsx  PromptProvider.tsx  StreamProvider.tsx
web_ui/src/components/: MainStreamViewer.tsx
web_ui/src/components/SettingsDialog/: SettingsDialog.tsx
web_ui/src/components/SettingsDialog/pages/: InputSettings.tsx  PromptsSettings.tsx
