[project]
name = "fluxrt"
version = "1.0"
requires-python = ">=3.12"
dependencies = [
    "transformers",
    "diffusers",
    "numpy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
